deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: java-microservice
  template:
    metadata:
      labels:
        app.kubernetes.io/name: java-microservice
    spec:
      containers:
      - name: java-ms-eks
        image: 110975517810.dkr.ecr.eu-central-1.amazonaws.com/java-ms-app:v1
        ports:
        - containerPort: 4567
