ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "java-microservice-ingress"
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: java-microservice
spec:
  ingressClassName: alb  
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "service-java-microservice"
            port:
              number: 80
